# engine-rag-context-pipeline

./: .env.example  .gitignore  Dockerfile  Dockerfile.dockerignore  README.md  ask.py  chain.py  docker-compose-prod.yml  docker-compose.yml  load_index.py  pyproject.toml  requirements-dev.txt  requirements.txt  retriever.py
.github/workflows/: tests.yml
eval/: dataset.jsonl  run_eval.py
rag_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_chain.py  test_load_index.py  test_retriever.py
